# FloatView

./: .gitignore  FloatView.opam  Readme.md  dune-project  floatview.js
.github/workflows/: main.yml
html/: dune  extra_runtime.js  floatview_js.ml  helper.ml  index.html  log.ml  style.css  utils.ml
html/bindings/: js_core.ml
lib/: binary.ml  color.ml  convert.ml  decimal.ml  dune  floats.ml  log.ml  utils.ml
test/: dune  test_FloatView.ml
